use mdx for embedded components in atrium text

--- a/src/content/atrium/es.mdx
+++ b/src/content/atrium/es.mdx
@@ -1,3 +1,5 @@
+import AtriumVideo from '@/components/AtriumVideo.vue'
+
 **El cambio climático afecta a todos, en todas partes. Por lo tanto, ninguna persona, país o zona horaria está excluida de la cumbre virtual Climate:Red, organizada por la red de la Cruz Roja y la Media Luna Roja. Al reunir a personas de todo el mundo, creamos una plataforma verdaderamente global para debatir e inspirar la acción climática.**
 
 Primero, haga su [registro](https://climate.red/register). Una semana antes de la cumbre, puede comenzar a navegar por el programa y crear su propio horario del 9 al 10 de septiembre. Consulte también la sección Qué hay ahora en para ver algunas sesiones interesantes y oradores inspiradores.
@@ -7,5 +9,7 @@ Durante la cumbre, además de nuestros interesantes paneles, sesiones y talleres
 Puede leer más sobre la visión colectiva de la red de la Cruz Roja y de la Media Luna Roja para abordar el cambio climático como una emergencia humanitaria en nuestra [Estrategia 2030](https://future-rcrc.com/strategy-2030/) y [las Ambiciones del Movimiento para Abordar la Crisis Climática](https://media.ifrc.org/ifrc/wp-content/uploads/sites/5/2020/02/Movement-Climate-Ambitions-2020-final.pdf). Nuestro [Kit de Capacitación sobre el Clima también](https://www.climatecentre.org/training/) podría ser un recurso útil para usted.
 
 Una cumbre no se trata solo de escuchar, sino de conectarse, inspirarse mutuamente, aprender juntos y construir nuevas ideas e iniciativas. En Climate:Red podrás hacer precisamente eso.
+
+<AtriumVideo />
 
 No podemos esperar para conocerte.
