--- a/src/content/atrium/ar.mdx
+++ b/src/content/atrium/ar.mdx
@@ -1,3 +1,5 @@
+import AtriumVideo from '@/components/AtriumVideo.vue'
+
 **يؤثر تغير المناخ على الجميع في كل مكان. ولذا، لن يُستبعد أي بلد أو أي شخص أو أي منطقة زمنية في مؤتمر القمة الذي ستعقده شبكة الصليب الأحمر والهلال الأحمر. من خلال جمع الأشخاص من جميع أنحاء العالم، سنقوم بإنشاء منصة عالمية حقيقية لمناقشة وإلهام العمل حول المناخ.**
 
 أولاً، يرجى [التسجيل](https://climate.red/register) قبل أسبوع واحد من القمة، يمكنك البدء في تصفح البرنامج وإنشاء الجدول الزمني الخاص بك في الفترة من ٩ إلى ١٠ سبتمبر. يمكنك أيضًا مراجعة قسم ماذا يحدث الذي يتضمن بعض الجلسات الممتعة والمتحدثين الملهمين.
@@ -8,5 +10,6 @@
 
 لا تتعلق القمة بالاستماع فقط، بل بالتواصل وإلهام بعضنا البعض والتعلم معًا وبناء أفكار ومبادرات جديدة. في مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ ستتمكن من القيام بذلك.
 
-لا يمكننا الانتظار لمقابلتك هنا.
+<AtriumVideo />
 
+لا يمكننا الانتظار لمقابلتك هنا.
