--- a/src/content/atrium/fr.mdx
+++ b/src/content/atrium/fr.mdx
@@ -1,3 +1,5 @@
+import AtriumVideo from '@/components/AtriumVideo.vue'
+
 **Le changement climatique affecte chacun, partout. Par conséquent, aucune personne, aucun pays ou aucun fuseau horaire n'est exclu du sommet Virtual Climate:Red, organisé par le réseau de la Croix-Rouge et du Croissant-Rouge. En réunissant des personnes du monde entier, nous créons une véritable plateforme mondiale pour débattre et inspirer l'action climatique.**
 
 Tout d'abord, veuillez vous [inscrire](https://climate.red/register) une semaine avant le sommet, vous pouvez commencer à parcourir et créer votre propre programme du 9 au 10 septembre. Consultez également la section Quoi de neuf pour découvrir des sessions intéressantes et des conférenciers inspirants.
@@ -7,5 +9,7 @@ Pendant le sommet, en plus de nos panels, sessions et ateliers attrayants, vous 
 Vous pouvez en savoir plus sur la vision commune du réseau de la Croix-Rouge et du Croissant-Rouge sur la lutte contre le changement climatique en tant qu'urgence humanitaire dans notre [Stratégie 2030](https://future-rcrc.com/strategy-2030/) et [Les ambitions du Mouvement pour faire face à la crise climatique](https://media.ifrc.org/ifrc/wp-content/uploads/sites/5/2020/02/Movement-Climate-Ambitions-2020-final.pdf). Notre [kit de formation sur le climat peut](https://www.climatecentre.org/training/) également être une ressource utile pour vous.
 
 Un sommet ne consiste pas seulement à écouter, il sert aussi à se connecter, à s’inspirer, à apprendre ensemble et à construire de nouvelles idées et initiatives. Lors du sommet Climate:Red, vous pourrez faire exactement cela.
+
+<AtriumVideo />
 
 Nous avons hâte de vous y rencontrer.
