colours, borders, headings changed for translation

--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -131,3 +131,12 @@ cookies:
     We use necessary cookies to make the site work.
     We'd like to use analytics to see how people experience the Climate:RED summit and to ensure that we can improve future virtual conferences and summits. 
     You can change your preference by clicking {0} in the site footer.
+
+session:
+  title: View Session
+  speakerHeading: Speakers
+  hostHeading: Host
+  infoHeading: Session info
+  linksHeading: Links
+  showPoll: Enable poll
+
