--- a/src/content/atrium/es.mdx
+++ b/src/content/atrium/es.mdx
@@ -4,7 +4,7 @@ import AtriumVideo from '@/components/AtriumVideo.vue'
 
 Al reunir a personas de todo el mundo, creamos una plataforma verdaderamente global para debatir e inspirar la acción climática.
 
-La cumbre presenta más de 200 sesiones interesantes para que elijas. Una semana antes de la cumbre, puede comenzar a navegar por el programa y crear su propio horario del 9 al 10 de septiembre.
+La cumbre presenta más de **200 sesiones interesantes** para que elijas. Una semana antes de la cumbre, puede comenzar a navegar por el programa y crear su propio horario del 9 al 10 de septiembre.
 
 Durante la cumbre, puedes:
 
