--- a/src/content/atrium/es.mdx
+++ b/src/content/atrium/es.mdx
@@ -18,16 +18,20 @@ La conferencia tiene la finalidad de servir a  conectarse, inspirarse mutuamente
 
 Las sesiones se organizan en torno a cuatro vertiente:
 
-ACCIÓN
+**ACCIÓN**
+
 ¿Qué hacen las organizaciones de la Cruz Roja y de la Media Luna Roja en relación con el clima? ¿Qué más deberíamos hacer? Estas sesiones, orientadas al examen de problemas y soluciones, se basarán en las experiencias y las enseñanzas extraídas, y tratarán de acelerar la adopción de medidas en toda la red.
  
-HABILITACIÓN
+**HABILITACIÓN**
+
 ¿Qué elementos podemos compartir o dar a conocer a otros? ¿Cómo podemos ayudar a los voluntarios y las comunidades con los que trabajamos para que aborden los riesgos relacionados con el clima? Estas sesiones girarán en torno al fortalecimiento de capacidades, la sensibilización, la participación de las comunidades y el liderazgo a nivel local.
 
-INFLUENCIA
+**INFLUENCIA**
+
 ¿Cómo podemos sacar partido de las asociaciones y de nuestra condición en calidad de auxiliares de los poderes públicos para incidir en el cambio y elevar las aspiraciones a nivel mundial? Estas sesiones se centrarán en la participación política y la diplomacia humanitaria desde el nivel local hasta el nivel mundial.
 
-TRANSFORMACIÓN 
+**TRANSFORMACIÓN**
+
 ¿Cómo deben cambiar nuestras modalidades de trabajo? ¿Cómo podemos ganar aptitud para funcionar en el futuro en un contexto de cambio climático? En estas sesiones examinaremos posibles innovaciones, iniciativas ecológicas y cambios institucionales.
 
 Puede elegir entre varios tipos de sesiones: paneles y debates, seminarios, charlas inspiradoras, juegos para aprender y dialogar, preguntas y respuestas en vivo con expertos, clínicas médico-paciente, conversaciones de ‘pecera’ y visitas virtuales. Visita [aquí]() para más detalles sobre los tipos de sesión.
