--- a/src/content/atrium/es.mdx
+++ b/src/content/atrium/es.mdx
@@ -34,9 +34,9 @@ Las sesiones se organizan en torno a cuatro vertiente:
 
 ¿Cómo deben cambiar nuestras modalidades de trabajo? ¿Cómo podemos ganar aptitud para funcionar en el futuro en un contexto de cambio climático? En estas sesiones examinaremos posibles innovaciones, iniciativas ecológicas y cambios institucionales.
 
-Puede elegir entre varios tipos de sesiones: paneles y debates, seminarios, charlas inspiradoras, juegos para aprender y dialogar, preguntas y respuestas en vivo con expertos, clínicas médico-paciente, conversaciones de ‘pecera’ y visitas virtuales. Visita [aquí]() para más detalles sobre los tipos de sesión.
+Puede elegir entre varios tipos de sesiones: paneles y debates, seminarios, charlas inspiradoras, juegos para aprender y dialogar, preguntas y respuestas en vivo con expertos, clínicas médico-paciente, conversaciones de ‘pecera’ y visitas virtuales. [Visita aquí](https://future-rcrc.com/es/2020/06/10/cumbre-virtual-sobre-el-clima-climate-red/) para más detalles sobre los tipos de sesión.
 
-Las sesiones cubrirán varios temas: reducción del riesgo de desastres con respecto del clima, salud, acción de alerta temprana, medios de vida y de los recursos hídricos, conflictos, jóvenes y voluntarios, déplacement lié au climat, sector privado, las inversiones, las leyes y las políticas, sustentabilidad y reverdecimiento, género, etcétera. Todos los temas se enumeran [aquí.]()
+Las sesiones cubrirán varios temas: reducción del riesgo de desastres con respecto del clima, salud, acción de alerta temprana, medios de vida y de los recursos hídricos, conflictos, jóvenes y voluntarios, déplacement lié au climat, sector privado, las inversiones, las leyes y las políticas, sustentabilidad y reverdecimiento, género, etcétera. Todos los temas se enumeran [aquí.](https://future-rcrc.com/es/2020/06/10/cumbre-virtual-sobre-el-clima-climate-red/)
 
 Durante la cumbre, además de nuestros interesantes paneles, sesiones y talleres, puede conectarse con personas de todo el mundo durante conversaciones con café.
 
