--- a/src/content/atrium/en.mdx
+++ b/src/content/atrium/en.mdx
@@ -33,11 +33,12 @@ How can we leverage our auxiliary role and partnerships to influence change and 
 
 What changes are needed in the ways we work? How can we be fit for the future in a changing climate? In these sessions we will look at innovations, greening and organisational changes.
 
-You can choose from various session types, such as panels and discussions, workshops, live Q&A with experts, Ignite Talks, games for learning and dialogue, fishbowls, doctor-patient clinics and virtual tours. In our innovation pitch tent you will hear innovative ideas and climate projects and vote on your favourites to win. From here you can read more about session types. 
+You can choose from various session types: panels and discussions, workshops, live Q&A with experts, Ignite Talks, games for learning and dialogue, fishbowls, doctor-patient clinics and virtual tours. In our innovation pitch tent you will hear innovative ideas and climate projects and vote on your favourites to win. [Visit here](https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#themes) for more info about session types. 
 
-Sessions will cover various themes: climate-smart disaster risk reduction, health, early warning early action, livelihoods, food and water security, conflict, climate displacement, youth and volunteers, private sector, investments, laws and policies, sustainability and greening, gender and so on. All themes are listed here.
+Sessions will cover various themes: climate-smart disaster risk reduction, health, early warning early action, livelihoods, food and water security, conflict, climate displacement, youth and volunteers, private sector, investments, laws and policies, sustainability and greening, gender and so on. All themes are listed [here.](https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#themes)
 
 During the summit, in addition to our engaging panels, sessions and workshops, you can connect with people from around the globe in coffee chats.
+
 
 <AtriumVideo />
 
