--- a/src/content/atrium/ar.mdx
+++ b/src/content/atrium/ar.mdx
@@ -1,10 +1,22 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
 
-**يؤثر تغير المناخ على الجميع في كل مكان. ولذا، لن يُستبعد أي بلد أو أي شخص أو أي منطقة زمنية في مؤتمر القمة الذي ستعقده شبكة الصليب الأحمر والهلال الأحمر. من خلال جمع الأشخاص من جميع أنحاء العالم، سنقوم بإنشاء منصة عالمية حقيقية لمناقشة وإلهام العمل حول المناخ.**
+**يؤثر تغير المناخ على الجميع في كل مكان. ولذا، لن يُستبعد أي بلد أو أي شخص أو أي منطقة زمنية من مؤتمر القمة الذي ستعقده شبكة الاتحاد الدولي للصليب الأحمر والهلال الأحمر. سترحب القمة بانضمام الجميع**
 
-أولاً، يرجى [التسجيل](https://climate.red/register) قبل أسبوع واحد من القمة، يمكنك البدء في تصفح البرنامج وإنشاء الجدول الزمني الخاص بك في الفترة من ٩ إلى ١٠ سبتمبر. يمكنك أيضًا مراجعة قسم ماذا يحدث الذي يتضمن بعض الجلسات الممتعة والمتحدثين الملهمين.
+ يجمع مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ الناس من جميع أنحاء العالم، مما يخلق منصة عالمية حقيقية  للمناقشة والعمل بما يخص تغير المناخ.
 
-خلال القمة، بالإضافة إلى حلقات النقاش التفاعلية وحلقات العمل، يمكنك التواصل مع أشخاص من جميع أنحاء العالم في دردشة حول فنجان قهوة.
+
+تضم القمة أكثر من 200 جلسة مشوقة لتختار من بينها. وقبل أسبوع واحد من القمة، يمكنك البدء في تصفح البرنامج وإنشاء جدول زمني خاص بك ليومي ٩-١٠سبتمبر
+خلال القمة :
+ يمكنك الاستماع إلى مجموعة رائعة من المتحدثين من وزراء  و علماء و رؤساء تنفيذيين و أشخاص من مجتمعات نائية  يقودون مبادرات حول تغير المناخ؛
+ سيمكنك أيضاً الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ في خيمة “عرض الابتكارات”  والتصويت على الأفكار المفضلة لديك للفوز ؛
+ستتمكن من مناقشة الحلول مع المشاركين الآخرين والنشطاء والباحثين وصناع القرار و العاملين في مجال تغير المناخ؛
+ستتمكن من مقابلة  أشخاص من جميع أنحاء العالم في محادثات افتراضية في دردشة حول فنجان قهوة؛ 
+ستقوم بجولات افتراضية على مشاريع حول تغير المناخ، والاستمتاع بألعاب رقمية حول تغير المناخ  ... وغيرها المزيد من النشاطات
+
+
+القمة معنية بالتواصل بين المشاركين وإلهام بعضهم البعض والتعلم سوياً في سبيل بناء أفكار ومبادرات جديدة. في مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ ستتمكن من القيام بذلك.
+
+
 
 يمكنك قراءة المزيد عن الرؤية المشتركة لشبكة الصليب الأحمر والهلال الأحمر بشأن معالجة تغير المناخ كحالة طوارئ إنسانية من [استراتيجيتنا٢٠٣٠](http:s//future-rere.com/strategy-2030) و[طموحات الحركة لمعالجة أزمة المناخ](https://media.ifrc.org/ifrc/wp-content/uploads/sites/5/2020/Movement-Climate-Ambitions-2020-final.pdf) وقد تكون [مجموعة التدريب حول المناخ الخاصة بنا](https://www.climatecentre.org/training) أيضًا مصدرًا مفيدًا لك.
 
