--- a/src/content/atrium/ar.mdx
+++ b/src/content/atrium/ar.mdx
@@ -7,11 +7,11 @@ import AtriumVideo from '@/components/AtriumVideo.vue'
 
 تضم القمة أكثر من 200 جلسة مشوقة لتختار من بينها. وقبل أسبوع واحد من القمة، يمكنك البدء في تصفح البرنامج وإنشاء جدول زمني خاص بك ليومي ٩-١٠سبتمبر
 خلال القمة :
- يمكنك الاستماع إلى مجموعة رائعة من المتحدثين من وزراء  و علماء و رؤساء تنفيذيين و أشخاص من مجتمعات نائية  يقودون مبادرات حول تغير المناخ؛
- سيمكنك أيضاً الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ في خيمة “عرض الابتكارات”  والتصويت على الأفكار المفضلة لديك للفوز ؛
-ستتمكن من مناقشة الحلول مع المشاركين الآخرين والنشطاء والباحثين وصناع القرار و العاملين في مجال تغير المناخ؛
-ستتمكن من مقابلة  أشخاص من جميع أنحاء العالم في محادثات افتراضية في دردشة حول فنجان قهوة؛ 
-ستقوم بجولات افتراضية على مشاريع حول تغير المناخ، والاستمتاع بألعاب رقمية حول تغير المناخ  ... وغيرها المزيد من النشاطات
+ * يمكنك الاستماع إلى مجموعة رائعة من المتحدثين من وزراء  و علماء و رؤساء تنفيذيين و أشخاص من مجتمعات نائية  يقودون مبادرات حول تغير المناخ
+ * سيمكنك أيضاً الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ في خيمة “عرض الابتكارات”  والتصويت على الأفكار المفضلة لديك للفوز 
+ستتمكن من مناقشة الحلول مع المشاركين الآخرين والنشطاء والباحثين وصناع القرار و العاملين في مجال تغير المناخ * 
+ستتمكن من مقابلة  أشخاص من جميع أنحاء العالم في محادثات افتراضية في دردشة حول فنجان قهوة *  
+* ستقوم بجولات افتراضية على مشاريع حول تغير المناخ، والاستمتاع بألعاب رقمية حول تغير المناخ  ... وغيرها المزيد من النشاطات
 
 
 القمة معنية بالتواصل بين المشاركين وإلهام بعضهم البعض والتعلم سوياً في سبيل بناء أفكار ومبادرات جديدة. في مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ ستتمكن من القيام بذلك.
