--- a/src/content/atrium/ar.mdx
+++ b/src/content/atrium/ar.mdx
@@ -9,8 +9,8 @@ import AtriumVideo from '@/components/AtriumVideo.vue'
 خلال القمة :
  * يمكنك الاستماع إلى مجموعة رائعة من المتحدثين من وزراء  و علماء و رؤساء تنفيذيين و أشخاص من مجتمعات نائية  يقودون مبادرات حول تغير المناخ
  * سيمكنك أيضاً الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ في خيمة “عرض الابتكارات”  والتصويت على الأفكار المفضلة لديك للفوز 
-ستتمكن من مناقشة الحلول مع المشاركين الآخرين والنشطاء والباحثين وصناع القرار و العاملين في مجال تغير المناخ * 
-ستتمكن من مقابلة  أشخاص من جميع أنحاء العالم في محادثات افتراضية في دردشة حول فنجان قهوة *  
+ستتمكن من مناقشة الحلول مع المشاركين الآخرين والنشطاء والباحثين وصناع القرار و العاملين في مجال تغير المناخ *
+* ستتمكن من مقابلة  أشخاص من جميع أنحاء العالم في محادثات افتراضية في دردشة حول فنجان قهوة 
 * ستقوم بجولات افتراضية على مشاريع حول تغير المناخ، والاستمتاع بألعاب رقمية حول تغير المناخ  ... وغيرها المزيد من النشاطات
 
 
