--- a/src/content/atrium/ar.mdx
+++ b/src/content/atrium/ar.mdx
@@ -7,9 +7,9 @@ import AtriumVideo from '@/components/AtriumVideo.vue'
 
 تضم القمة أكثر من 200 جلسة مشوقة لتختار من بينها. وقبل أسبوع واحد من القمة، يمكنك البدء في تصفح البرنامج وإنشاء جدول زمني خاص بك ليومي ٩-١٠سبتمبر
 خلال القمة :
- * يمكنك الاستماع إلى مجموعة رائعة من المتحدثين من وزراء  و علماء و رؤساء تنفيذيين و أشخاص من مجتمعات نائية  يقودون مبادرات حول تغير المناخ
- * سيمكنك أيضاً الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ في خيمة “عرض الابتكارات”  والتصويت على الأفكار المفضلة لديك للفوز 
-ستتمكن من مناقشة الحلول مع المشاركين الآخرين والنشطاء والباحثين وصناع القرار و العاملين في مجال تغير المناخ *
+* يمكنك الاستماع إلى مجموعة رائعة من المتحدثين من وزراء  و علماء و رؤساء تنفيذيين و أشخاص من مجتمعات نائية  يقودون مبادرات حول تغير المناخ
+* سيمكنك أيضاً الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ في خيمة “عرض الابتكارات”  والتصويت على الأفكار المفضلة لديك للفوز 
+* ستتمكن من مناقشة الحلول مع المشاركين الآخرين والنشطاء والباحثين وصناع القرار و العاملين في مجال تغير المناخ
 * ستتمكن من مقابلة  أشخاص من جميع أنحاء العالم في محادثات افتراضية في دردشة حول فنجان قهوة 
 * ستقوم بجولات افتراضية على مشاريع حول تغير المناخ، والاستمتاع بألعاب رقمية حول تغير المناخ  ... وغيرها المزيد من النشاطات
 
@@ -18,10 +18,38 @@ import AtriumVideo from '@/components/AtriumVideo.vue'
 
 
 
+يتم تنظيم الجلسات حول أربعة مسارات
+
+
+**العمل**
+
+ما الذي تفعله الحركة بشأن المناخ؟ وما هي الإجراءات الإضافية التي يجب أن تتخذها؟ ستستند هذه الجلسات الموجهة نحو حل المشاكل، إلى الخبرات والدروس المستخلصة، وستسعى إلى تسريع العمل عبر شبكة الصليب الأحمر والهلال الأحمر
+
+
+**التمكين**
+
+ ما الذي يمكن أن نشاطره مع الآخرين ونقدمه لهم؟ كيف يمكن لنا دعم المتطوعين والمجتمعات المحلية التي نعمل معهم لمساعدتهم على التصدي لمخاطر المناخ؟ ستركز هذه الجلسات على تعزيز القدرات والتوعية والمشاركة المجتمعية والقيادة المحلية
+
+**التأثير**
+كيف يمكن لنا الاستفادة من دورنا المساعد وشراكاتنا للتأثير في التغيير وزيادة طموحنا على الصعيد العالمي؟
+ستركز هذه الجلسات على تعهدات السياسات والدبلوماسية الإنسانية انطلاقا من المستوى المحلي وانتهاء بالمستوى 
+
+
+**التحويل**
+ما هي التغييرات اللازمة في طرق عملنا؟وكيف يمكن لنا التأهب للمستقبل في ظل تغيّر المناخ؟ سننظر في تلك الجلسات في الابتكارات والتخضير والتغييرات التنظيمية
+
+يمكنك الاختيار من بين أنواع الجلسات المختلفة: جلسة لطرح الأفكار، ألعاب للتعلم والحوار، أفرقة خبراء ونقاشات، جلسة حية للأسئلة والأجوبة مع الخبراء، الاشتراك في حل المشاكل
+عيادات الأطباء-المرضى، جولات افتراضية. في خيمة “عرض الابتكارات” ستتمكن من الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ والتصويت على الأفكار المفضلة لديك للفوز . قم بزيارة هذا الرابط لمزيد من المعلومات حول أنواع الجلسات
+
+ستغطي الجلسات مواضيع مختلفة: الحد من مخاطر الكوارث، التمويل القائم على التوقعات والإنذار المبكر والعمل المبكر، الصحة، سبل المعيشة والخدمات الصامدة للمناخ وإدارة الموارد المائية بطريقة مستدامة، النزاعات، النزوح بسبب المناخ، الوسط الحضري، الشباب والمتطوعون، النوع الاجتماعي، وما إلى ذلك. جميع المواضيع متوفرة على  هذا الرابط
+ 
+خلال القمة، بالإضافة إلى حلقات النقاش وجلسات العمل وورش العمل المشوقة، يمكنك التواصل مع أشخاص من جميع أنحاء العالم في محادثات حول فنجان القهوة   
+
+     
+<AtriumVideo />
+
+
 يمكنك قراءة المزيد عن الرؤية المشتركة لشبكة الصليب الأحمر والهلال الأحمر بشأن معالجة تغير المناخ كحالة طوارئ إنسانية من [استراتيجيتنا٢٠٣٠](http:s//future-rere.com/strategy-2030) و[طموحات الحركة لمعالجة أزمة المناخ](https://media.ifrc.org/ifrc/wp-content/uploads/sites/5/2020/Movement-Climate-Ambitions-2020-final.pdf) وقد تكون [مجموعة التدريب حول المناخ الخاصة بنا](https://www.climatecentre.org/training) أيضًا مصدرًا مفيدًا لك.
 
 لا تتعلق القمة بالاستماع فقط، بل بالتواصل وإلهام بعضنا البعض والتعلم معًا وبناء أفكار ومبادرات جديدة. في مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ ستتمكن من القيام بذلك.
 
-<AtriumVideo />
-
-لا يمكننا الانتظار لمقابلتك هنا.
