--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -157,8 +157,18 @@ interpret:
   testLabel: Test mic
   startAction: Go Live
   stopAction: Disconnect
+  takeoverAction: Takeover
+  takeoverConfirm: Are you sure you want to takeover?
   takeoverActionLabel: Request takeover
   takeoverStatusLabel: status
   plusMins: now | 1 min | {count} mins
   noResponse: No response
   acceptedBy: Accepted by {0}
+  onlineLabel: Online now
+  isLive: '{0} is live'
+  confirmLeave: 'You are live broadcasting, are you sure?'
+  sendMessage:
+    placeholder: Send a message
+    action: Send
+  isSelf: (you)
+  messagesLabel: Messages
