update privacy policy

--- a/src/content/privacy/fr.mdx
+++ b/src/content/privacy/fr.mdx
@@ -1,5 +1,6 @@
 # Politique de confidentialité
 
+> Dernière mise à jour: 26/08/2020
 
 Pour faciliter la gestion du Sommet, certaines de vos données personnelles (comme votre nom et votre adresse électronique) devront être collectées. En outre, étant donné que nous travaillons avec une série de partenaires pour gérer les différents événements, certaines de vos données (comme votre adresse électronique) devront également être transmises à des tiers et partenaires de confiance. Pour de plus amples informations sur la façon dont vos données personnelles pourront, le cas échéant, être utilisées par des tiers, veuillez consulter les politiques de confidentialité disponibles sur les différents sites et plateformes utilisés durant le Sommet.
  
@@ -13,7 +14,7 @@ Pour faciliter la gestion du Sommet, certaines de vos données personnelles (com
 - [Sendgrid](https://sendgrid.com/policies/privacy-2016/)
 - [Github](https://docs.github.com/en/github/site-policy/github-privacy-statement)
 - [Open Lab](https://www.ncl.ac.uk/media/wwwnclacuk/freedomofinformation/dataprotection/Data%20Protection%20Policy%20June2020.pdf)
-
+- [Adobe fonts](https://www.adobe.com/privacy/policies/adobe-fonts.html#)
 
 Nous ne transmettrons que les données personnelles nécessaires et nous prendrons des mesures pour garantir leur protection et faire en sorte qu’elles ne restent pas stockées chez nous ou chez des tiers et partenaires de confiance plus longtemps que nécessaire. Veuillez noter que vos données personnelles ne seront pas utilisées à des fins autres que celles qu’exige la gestion du Sommet. 
 
