--- a/src/content/privacy/ar.mdx
+++ b/src/content/privacy/ar.mdx
@@ -1,5 +1,7 @@
 # سياسة حماية الخصوصية
 
+> 26/08/2020 :آخر تحديث
+
 من الضروري جمع بعض بياناتكم الشخصية (مثل الاسم وعنوان البريد الإلكتروني) تسهيلاً لإدارة قمة المناخ الافتراضية. إضافة إلى ذلك، يجب أن نتقاسم بعض هذه البيانات (مثل عنوان البريد الإلكتروني) مع عدد من الأطراف الثالثة والشركاء الموثوق بهم، ذلك أننا نتعاون مع مجموعة من الشركاء في تنظيم الأحداث الخاصة.
 للحصول على معلومات أدق بشأن الطريقة التي يمكن أن تستخدم بها بعض الأطراف الثالثة بياناتكم الشخصية حيثما ينطبق ذلك، يرجى العودة إلى سياسات حماية الخصوصية المتاحة على مختلف المواقع والمنصات المستخدمة أثناء القمة
 
@@ -13,6 +15,7 @@
 - [Sendgrid](https://sendgrid.com/policies/privacy-2016/)
 - [Github](https://docs.github.com/en/github/site-policy/github-privacy-statement)
 - [Open Lab](https://www.ncl.ac.uk/media/wwwnclacuk/freedomofinformation/dataprotection/Data%20Protection%20Policy%20June2020.pdf)
+- [Adobe fonts](https://www.adobe.com/privacy/policies/adobe-fonts.html#)
 
 لن نتقاسم إلا البيانات الشخصية الضرورية، وسنتخذ جميع التدابير اللازمة لضمان حمايتها وعدم بقائها مخزنة لدينا أو لدى الأطراف الثالثة والشركاء الموثوقين مدة أطول مما تقتضيه الضرورة. وتجدر الإشارة إلى أن بياناتكم الشخصية لن تستخدم لأغراض أخرى تتعدى ما هو منسجم مع إدارة القمة.  
 
