--- a/src/content/privacy/en.mdx
+++ b/src/content/privacy/en.mdx
@@ -1,6 +1,8 @@
 # Privacy policy
 
-In order to facilitate the management of the Summit, some of your personal data (such as your name and email address) must be collected.  Additionally, since we are working with a number of partners in order to manage the individual event(s), some of your data (such as your email address) must also be shared with certain third parties and trusted partners.  For more specific information on how your personal data may be used by third parties, as applicable please review the privacy policies available on the respective sites and platforms used during the Summit.
+> Last updated: 26/08/2020
+
+In order to facilitate the management of the Summit, some of your personal data (such as your name and email address) must be collected. Additionally, since we are working with a number of partners in order to manage the individual event(s), some of your data (such as your email address) must also be shared with certain third parties and trusted partners. For more specific information on how your personal data may be used by third parties, as applicable please review the privacy policies available on the respective sites and platforms used during the Summit.
 
 ### Third Parties and Trusted Partners
 
@@ -12,18 +14,17 @@ In order to facilitate the management of the Summit, some of your personal data 
 - [Sendgrid](https://sendgrid.com/policies/privacy-2016/)
 - [Github](https://docs.github.com/en/github/site-policy/github-privacy-statement)
 - [Open Lab](https://www.ncl.ac.uk/media/wwwnclacuk/freedomofinformation/dataprotection/Data%20Protection%20Policy%20June2020.pdf)
+- [Adobe fonts](https://www.adobe.com/privacy/policies/adobe-fonts.html#)
 
+We will only share the personal data that is necessary and will take measures to ensure that it is protected and does not remain stored with us or with third parties and trusted partners any longer than necessary. Please note that your personal data will not be used for purposes beyond those compatible with the management of the Summit.
 
-We will only share the personal data that is necessary and will take measures to ensure that it is protected and does not remain stored with us or with third parties and trusted partners any longer than necessary.  Please note that your personal data will not be used for purposes beyond those compatible with the management of the Summit.
- 
-The following personal data will be collected and processed for the reasons outlined below. 
-Name and email: used for registration, verification and relevant communications. 
+The following personal data will be collected and processed for the reasons outlined below.
+Name and email: used for registration, verification and relevant communications.
 Profile data including preferred language, affiliation with RCRC, (optionally country): in order to provide you with the correct options during participation and to gather statistics regarding demographic participation.
-IP address: in order to facilitate breakout sessions, and to maintain security and integrity of the sessions/event(s).  Please note that this may reveal your general location.  This and other metadata will be anonymized and/or securely deleted when no longer necessary for the management of the event(s).
- 
-During sessions, your name and affiliated entity will be viewable by other participants.  When events are recorded, notice will be provided.
- 
-If you have any specific questions about the use of your personal data, please contact solferino.academy@ifrc.org 
+IP address: in order to facilitate breakout sessions, and to maintain security and integrity of the sessions/event(s). Please note that this may reveal your general location. This and other metadata will be anonymized and/or securely deleted when no longer necessary for the management of the event(s).
+
+During sessions, your name and affiliated entity will be viewable by other participants. When events are recorded, notice will be provided.
+
+If you have any specific questions about the use of your personal data, please contact solferino.academy@ifrc.org
 
 For the full IFRC policy on data protection please visit [here](https://edit.climate.red/uploads/ifrc-data-protection-policy-en.pdf).
-
