--- a/src/content/atrium/es.mdx
+++ b/src/content/atrium/es.mdx
@@ -8,20 +8,20 @@ La cumbre presenta más de **200 sesiones interesantes** para que elijas. Una se
 
 Durante la cumbre, puedes:
 
-* Escuchar nuestra fascinante gama de oradores, desde ministros hasta científicos, pasando por directores generales y personas de comunidades remotas que impulsan iniciativas sobre el cambio climático todos los días; 
-* Escuchar las ideas innovadoras y los proyectos climáticos en nuestras carpas de innovación y votar por sus favoritos para ganar; 
-* debatir soluciones con otros profesionales, activistas, investigadores y responsables de la toma de decisiones que trabajan por el clima; 
-* conocer a personas de todo el mundo en charlas virtuales de café al azar; 
-* hacer visitas virtuales a proyectos climáticos, jugar a juegos climáticos en tiempo real... ¡y mucho más!
+- Escuchar nuestra fascinante gama de oradores, desde ministros hasta científicos, pasando por directores generales y personas de comunidades remotas que impulsan iniciativas sobre el cambio climático todos los días;
+- Escuchar las ideas innovadoras y los proyectos climáticos en nuestras carpas de innovación y votar por sus favoritos para ganar;
+- debatir soluciones con otros profesionales, activistas, investigadores y responsables de la toma de decisiones que trabajan por el clima;
+- conocer a personas de todo el mundo en charlas virtuales de café al azar;
+- hacer visitas virtuales a proyectos climáticos, jugar a juegos climáticos en tiempo real... ¡y mucho más!
 
-La conferencia tiene la finalidad de servir a  conectarse, inspirarse mutuamente, aprender juntos y construir nuevas ideas e iniciativas. En Climate:Red podrás hacer precisamente eso.
+La conferencia tiene la finalidad de servir a conectarse, inspirarse mutuamente, aprender juntos y construir nuevas ideas e iniciativas. En Climate:Red podrás hacer precisamente eso.
 
 Las sesiones se organizan en torno a cuatro vertiente:
 
 **ACCIÓN**
 
 ¿Qué hacen las organizaciones de la Cruz Roja y de la Media Luna Roja en relación con el clima? ¿Qué más deberíamos hacer? Estas sesiones, orientadas al examen de problemas y soluciones, se basarán en las experiencias y las enseñanzas extraídas, y tratarán de acelerar la adopción de medidas en toda la red.
- 
+
 **HABILITACIÓN**
 
 ¿Qué elementos podemos compartir o dar a conocer a otros? ¿Cómo podemos ayudar a los voluntarios y las comunidades con los que trabajamos para que aborden los riesgos relacionados con el clima? Estas sesiones girarán en torno al fortalecimiento de capacidades, la sensibilización, la participación de las comunidades y el liderazgo a nivel local.
@@ -45,6 +45,3 @@ Durante la cumbre, además de nuestros interesantes paneles, sesiones y talleres
 Puede leer más sobre la visión colectiva de la red de la Cruz Roja y de la Media Luna Roja para abordar el cambio climático como una emergencia humanitaria en nuestra [Estrategia 2030](https://future-rcrc.com/strategy-2030/) y [las Ambiciones del Movimiento para Abordar la Crisis Climática](https://media.ifrc.org/ifrc/wp-content/uploads/sites/5/2020/02/Movement-Climate-Ambitions-2020-final.pdf). Nuestro [Kit de Capacitación sobre el Clima también](https://www.climatecentre.org/training/) podría ser un recurso útil para usted.
 
 Una cumbre no se trata solo de escuchar, sino de conectarse, inspirarse mutuamente, aprender juntos y construir nuevas ideas e iniciativas. En Climate:Red podrás hacer precisamente eso.
-
-
-
