--- a/src/content/privacy/ar.mdx
+++ b/src/content/privacy/ar.mdx
@@ -1,6 +1,6 @@
 # سياسة حماية الخصوصية
 
-> 26/08/2020 :آخر تحديث
+> 26/08/2020 آخر تحديث
 
 من الضروري جمع بعض بياناتكم الشخصية (مثل الاسم وعنوان البريد الإلكتروني) تسهيلاً لإدارة قمة المناخ الافتراضية. إضافة إلى ذلك، يجب أن نتقاسم بعض هذه البيانات (مثل عنوان البريد الإلكتروني) مع عدد من الأطراف الثالثة والشركاء الموثوق بهم، ذلك أننا نتعاون مع مجموعة من الشركاء في تنظيم الأحداث الخاصة.
 للحصول على معلومات أدق بشأن الطريقة التي يمكن أن تستخدم بها بعض الأطراف الثالثة بياناتكم الشخصية حيثما ينطبق ذلك، يرجى العودة إلى سياسات حماية الخصوصية المتاحة على مختلف المواقع والمنصات المستخدمة أثناء القمة
@@ -17,14 +17,14 @@
 - [Open Lab](https://www.ncl.ac.uk/media/wwwnclacuk/freedomofinformation/dataprotection/Data%20Protection%20Policy%20June2020.pdf)
 - [Adobe fonts](https://www.adobe.com/privacy/policies/adobe-fonts.html#)
 
-لن نتقاسم إلا البيانات الشخصية الضرورية، وسنتخذ جميع التدابير اللازمة لضمان حمايتها وعدم بقائها مخزنة لدينا أو لدى الأطراف الثالثة والشركاء الموثوقين مدة أطول مما تقتضيه الضرورة. وتجدر الإشارة إلى أن بياناتكم الشخصية لن تستخدم لأغراض أخرى تتعدى ما هو منسجم مع إدارة القمة.  
+لن نتقاسم إلا البيانات الشخصية الضرورية، وسنتخذ جميع التدابير اللازمة لضمان حمايتها وعدم بقائها مخزنة لدينا أو لدى الأطراف الثالثة والشركاء الموثوقين مدة أطول مما تقتضيه الضرورة. وتجدر الإشارة إلى أن بياناتكم الشخصية لن تستخدم لأغراض أخرى تتعدى ما هو منسجم مع إدارة القمة.
 
-يتم جمع البيانات الشخصية التالية ومعالجتها للأسباب المحددة أدناه. 
-الاسم وعنوان البريد الإلكتروني: يستخدمان للتسجيل والتدقيق والمراسلات ذات الصلة.  
+يتم جمع البيانات الشخصية التالية ومعالجتها للأسباب المحددة أدناه.
+الاسم وعنوان البريد الإلكتروني: يستخدمان للتسجيل والتدقيق والمراسلات ذات الصلة.
 
-بيانات التعريف الشخصية بما في ذلك اللغة المفضلة، والانتماء إلى الصليب الأحمر والهلال الأحمر، (ذكر البلد اختياري) : من أجل تزويدكم بالخيارات الصحيحة أثناء المشاركة، وجمع البيانات الإحصائية عن التوزيع الديمغرافي للمشاركين. 
-عنوان بروتوكول الأنترنت (أي بي) IP address : من أجل تسهيل جلسات العمل المصغرة، والحفاظ على أمن وسلامة أعمال الجلسات/والحدث (أو الأحداث). يرجى الانتباه إلى أن ذلك قد يكشف عن موقعكم. وسوف يتم إخفاء هوية مصدر هذه البيانات والبيانات الوصفية الأخرى و/أو حذفها بشكل مأمون حين تنتفي الحاجة إليها لأغراض إدارة الحدث (أو الأحداث). 
+بيانات التعريف الشخصية بما في ذلك اللغة المفضلة، والانتماء إلى الصليب الأحمر والهلال الأحمر، (ذكر البلد اختياري) : من أجل تزويدكم بالخيارات الصحيحة أثناء المشاركة، وجمع البيانات الإحصائية عن التوزيع الديمغرافي للمشاركين.
+عنوان بروتوكول الأنترنت (أي بي) IP address : من أجل تسهيل جلسات العمل المصغرة، والحفاظ على أمن وسلامة أعمال الجلسات/والحدث (أو الأحداث). يرجى الانتباه إلى أن ذلك قد يكشف عن موقعكم. وسوف يتم إخفاء هوية مصدر هذه البيانات والبيانات الوصفية الأخرى و/أو حذفها بشكل مأمون حين تنتفي الحاجة إليها لأغراض إدارة الحدث (أو الأحداث).
 
-إذا كانت لديكم أية أسئلة خاصة بشأن استخدام بياناتكم الشخصية، يرجى الاتصال بالعنوان التالي: solferino.academy@ifrc.org 
+إذا كانت لديكم أية أسئلة خاصة بشأن استخدام بياناتكم الشخصية، يرجى الاتصال بالعنوان التالي: solferino.academy@ifrc.org
 
 للاطلاع على النص الكامل لسياسة الاتحاد الدولي بشأن حماية البيانات يرجى زيارة الموقع التالي: [link](https://edit.climate.red/uploads/ifrc-data_protection-policy_ar.pdf)
