--- a/src/content/atrium/en.mdx
+++ b/src/content/atrium/en.mdx
@@ -1,19 +1,24 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
 
-**Climate change affects everyone, everywhere. Therefore, no person, country or time zone is excluded from the virtual Climate:Red Summit, organised by the network of the International Federation of Red Cross and Red Crescent. By bringing together people from all around the world, we create a truly global platform to debate and inspire climate action.**
+**Climate change affects everyone, everywhere.
+Therefore, no person, country or time zone is excluded from the virtual Climate:Red Summit,
+organised by the network of the International Federation of Red Cross and Red Crescent.
+By bringing together people from all around the world,
+we create a truly global platform to debate and inspire climate action.**
 
-Climate:Red will bring together people from all around the world, creating a truly global platform to debate and inspire climate action. 
+Climate:Red will bring together people from all around the world, creating a truly global platform to debate and inspire climate action.
 
-The summit features over **200 intriguing sessions** for you to choose from. One week before the summit you can start browsing the programme and build your own schedule for 9 – 10 September. 
+The summit features over **200 intriguing sessions** for you to choose from. One week before the summit you can start browsing the programme and build your own schedule for 9 – 10 September.
 
-During the summit, you can: 
-* listen to our fascinating array of speakers from ministers to scientists to CEOs to people in remote communities driving climate change initiatives every day; 
-* hear innovative ideas and climate projects in our innovation pitch tent and vote on your favourites to win; 
-* discuss solutions with other practitioners, campaigners, researchers and decision makers working for climate; 
-* meet people from all around the globe in random virtual coffee chats; 
-* take virtual tours of climate projects, play real time climate games… and more!
+During the summit, you can:
 
-A summit is about connecting, inspiring each other, learning together and building new ideas and initiatives. In Climate:Red you will be able to do just that. 
+- listen to our fascinating array of speakers from ministers to scientists to CEOs to people in remote communities driving climate change initiatives every day;
+- hear innovative ideas and climate projects in our innovation pitch tent and vote on your favourites to win;
+- discuss solutions with other practitioners, campaigners, researchers and decision makers working for climate;
+- meet people from all around the globe in random virtual coffee chats;
+- take virtual tours of climate projects, play real time climate games… and more!
+
+A summit is about connecting, inspiring each other, learning together and building new ideas and initiatives. In Climate:Red you will be able to do just that.
 
 The sessions are arranged around four tracks:
 
@@ -33,16 +38,14 @@ How can we leverage our auxiliary role and partnerships to influence change and 
 
 What changes are needed in the ways we work? How can we be fit for the future in a changing climate? In these sessions we will look at innovations, greening and organisational changes.
 
-You can choose from various session types: panels and discussions, workshops, live Q&A with experts, Ignite Talks, games for learning and dialogue, fishbowls, doctor-patient clinics and virtual tours. In our innovation pitch tent you will hear innovative ideas and climate projects and vote on your favourites to win. [Visit here](https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#themes) for more info about session types. 
+You can choose from various session types: panels and discussions, workshops, live Q&A with experts, Ignite Talks, games for learning and dialogue, fishbowls, doctor-patient clinics and virtual tours. In our innovation pitch tent you will hear innovative ideas and climate projects and vote on your favourites to win. [Visit here](https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#themes) for more info about session types.
 
 Sessions will cover various themes: climate-smart disaster risk reduction, health, early warning early action, livelihoods, food and water security, conflict, climate displacement, youth and volunteers, private sector, investments, laws and policies, sustainability and greening, gender and so on. All themes are listed [here.](https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#themes)
 
 During the summit, in addition to our engaging panels, sessions and workshops, you can connect with people from around the globe in coffee chats.
-
 
 <AtriumVideo />
 
 You can read more about the Red Cross and Red Crescent network’s collective vision on addressing climate change as a humanitarian emergency from our [Strategy 2030](https://future-rcrc.com/strategy-2030/) and [The Movement Ambitions to Address the Climate Crisis](https://media.ifrc.org/ifrc/wp-content/uploads/sites/5/2020/02/Movement-Climate-Ambitions-2020-final.pdf). Our [Climate Training Kit](https://www.climatecentre.org/training) might also be a useful resource for you.
 
 A summit is not just about listening, but connecting, inspiring each other, learning together and building new ideas and initiatives. In Climate:Red you will be able to do just that.
-
