--- a/src/content/atrium/fr.mdx
+++ b/src/content/atrium/fr.mdx
@@ -7,14 +7,14 @@ En réunissant des personnes du monde entier, nous créons une véritable platef
 Le sommet vous propose de choisir parmi plus de **200 sessions fascinantes**. Une semaine avant le sommet, vous pouvez commencer à parcourir le programme et créer votre propre programme du 9 au 10 septembre.
 
 Pendant le sommet, vous pourrez:
-* Ecouter notre panel de conférenciers fascinants, allant des ministres aux scientifiques, en passant par les PDG et des personnes vivant au cœur de communautés isolées, où ils mènent chaque jour des initiatives en matière de changement climatique; 
-* Accéder à des idées innovantes et des projets climatiques dans nos tentes de “pitch innovation” et voter afin que votre favoris l’emporte; 
-* Discuter de solutions avec d'autres praticiens, militants, chercheurs et décideurs travaillant pour le climat; 
-* Rencontrer des gens du monde entier lors de discussions de café virtuelles et aléatoires; 
-* Et faire des visites virtuelles de projets climatiques, ainsi que jouer à des jeux climatiques en temps réel… et bien plus encore!
+
+- Ecouter notre panel de conférenciers fascinants, allant des ministres aux scientifiques, en passant par les PDG et des personnes vivant au cœur de communautés isolées, où ils mènent chaque jour des initiatives en matière de changement climatique;
+- Accéder à des idées innovantes et des projets climatiques dans nos tentes de “pitch innovation” et voter afin que votre favoris l’emporte;
+- Discuter de solutions avec d'autres praticiens, militants, chercheurs et décideurs travaillant pour le climat;
+- Rencontrer des gens du monde entier lors de discussions de café virtuelles et aléatoires;
+- Et faire des visites virtuelles de projets climatiques, ainsi que jouer à des jeux climatiques en temps réel… et bien plus encore!
 
 Un sommet consiste à se connecter, à s’inspirer, à apprendre ensemble et à construire de nouvelles idées et initiatives. Lors du sommet Climate:Red, vous pourrez faire exactement cela.
-
 
 Les séances sont organisées autour de quatre axes:
 
@@ -30,7 +30,7 @@ Qu’avons-nous à partager et à donner aux autres ? Comment pouvons-nous sou
 
 Comment pouvons-nous tirer parti de notre rôle d’auxiliaire et de nos partenariats pour influencer le changement et élever le niveau d’ambition dans le monde ? Lors de ces séances, l’accent sera mis sur les engagements en matière de politiques et la diplomatie humanitaire, de l’échelle locale à l’échelle mondiale.
 
-**TRANSFORMER** 
+**TRANSFORMER**
 En quoi devons-nous modifier nos méthodes de travail ? Comment pouvons-nous nous équiper pour continuer de mener notre action dans un avenir marqué par les changements climatiques ? Pendant ces séances, nous examinerons les innovations, l’écologisation et les changements organisationnels.
 
 Vous pouvez choisir parmi différents types de séances: tables rondes et discussions, ateliers, séances de questions/réponses en direct avec des experts, Présentations Ignite, jeux d’apprentissage et de dialogue, bocal à poisson séances de réflexion axée sur les solutions et visites virtuelles. Dans notre tente de “pitch innovation” vous pourrez accéder à des idées innovantes et des projets climatiques et voter afin que votre favoris l’emporte. [Visitez ici](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/) pour plus de détails sur les types de séances.
@@ -44,5 +44,3 @@ Pendant le sommet, en plus de nos panels, sessions et ateliers attrayants, vous 
 Vous pouvez en savoir plus sur la vision commune du réseau de la Croix-Rouge et du Croissant-Rouge sur la lutte contre le changement climatique en tant qu'urgence humanitaire dans notre [Stratégie 2030](https://future-rcrc.com/strategy-2030/) et [Les ambitions du Mouvement pour faire face à la crise climatique](https://media.ifrc.org/ifrc/wp-content/uploads/sites/5/2020/02/Movement-Climate-Ambitions-2020-final.pdf). Notre [kit de formation sur le climat peut](https://www.climatecentre.org/training/) également être une ressource utile pour vous.
 
 Un sommet ne consiste pas seulement à écouter, il sert aussi à se connecter, à s’inspirer, à apprendre ensemble et à construire de nouvelles idées et initiatives. Lors du sommet Climate:Red, vous pourrez faire exactement cela.
-
-
