--- a/src/content/atrium/en.mdx
+++ b/src/content/atrium/en.mdx
@@ -1,6 +1,6 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
 
-**Climate change affects everyone, everywhere. Therefore, no person, country or time zone is excluded from the virtual Climate:Red Summit, organised by the network of the International Federation of Red Cross and Red Crescent. By bringing together people from all around the world, we create a truly global platform to debate and inspire climate action.**
+**Climate change affects everyone, everywhere - therefore no person, country or time zone is excluded from the virtual Climate:Red Summit, organised by the network of the International Federation of Red Cross and Red Crescent and open for everyone to join** 
 
 Climate:Red will bring together people from all around the world, creating a truly global platform to debate and inspire climate action. 
 
