--- a/src/content/atrium/fr.mdx
+++ b/src/content/atrium/fr.mdx
@@ -1,6 +1,6 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
 
-**Le changement climatique affecte chacun, partout. Par conséquent, aucune personne, aucun pays ou aucun fuseau horaire n'est exclu du sommet Virtual Climate:Red, organisé par le réseau de la Croix-Rouge et du Croissant-Rouge. En réunissant des personnes du monde entier, nous créons une véritable plateforme mondiale pour débattre et inspirer l'action climatique.**
+**Le changement climatique affecte chacun, partout - par conséquent, aucune personne, aucun pays ou aucun fuseau horaire n'est exclu du sommet Virtual Climate:Red, organisé par le réseau de La Fédération internationale de la Croix-Rouge et du Croissant-Rouge et ouvert à tous.**
 
 En réunissant des personnes du monde entier, nous créons une véritable plateforme mondiale pour débattre et inspirer l'action climatique.
 
@@ -33,7 +33,7 @@ Comment pouvons-nous tirer parti de notre rôle d’auxiliaire et de nos partena
 **TRANSFORMER** 
 En quoi devons-nous modifier nos méthodes de travail ? Comment pouvons-nous nous équiper pour continuer de mener notre action dans un avenir marqué par les changements climatiques ? Pendant ces séances, nous examinerons les innovations, l’écologisation et les changements organisationnels.
 
-Vous pouvez choisir parmi différents types de séances: tables rondes et discussions, ateliers, séances de questions/réponses en direct avec des experts, Présentations Ignite, jeux d’apprentissage et de dialogue, bocal à poisson séances de réflexion axée sur les solutions et visites virtuelles. Dans notre tente de “pitch innovation” vous pourrez accéder à des idées innovantes et des projets climatiques et voter afin que votre favoris l’emporte. [Visitez ici](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/) pour plus de détails sur les types de séances.
+Vous pouvez choisir parmi différents types de séances: tables rondes et discussions, ateliers, séances de questions/réponses en direct avec des experts, Présentations Ignite, jeux d’apprentissage et de dialogue, bocal à poisson, séances de réflexion axée sur les solutions et visites virtuelles. Dans notre tente de “pitch innovation” vous pourrez accéder à des idées innovantes et des projets climatiques et voter afin que votre favoris l’emporte. [Cliquez sur ce lien](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/) pour plus de détails sur les types de séances.
 
 Les séances couvriront différents thèmes: réduction des risques de catastrophe climato-intelligents, santé, alerte précoce et action rapide, moyens de subsistance et des ressources en eau, conflits, déplacement lié au climat, jeunes et volontaires, secteur privé, les investissements, les lois, les politiques, durabilité et écologisation, genre, et caetera. Tous les thèmes sont répertoriés [ici](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/)
 
