--- a/src/content/atrium/es.mdx
+++ b/src/content/atrium/es.mdx
@@ -1,6 +1,6 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
 
-**El cambio climático afecta a todos, en todas partes. Por lo tanto, ninguna persona, país o zona horaria está excluida de la cumbre virtual Climate:Red, organizada por la red de la Cruz Roja y la Media Luna Roja. Al reunir a personas de todo el mundo, creamos una plataforma verdaderamente global para debatir e inspirar la acción climática.**
+**El cambio climático afecta a todos, en todas partes - por lo tanto, ninguna persona, país o zona horaria está excluida de la cumbre virtual Climate:Red, organizada por la red de la Federación Internacional de la Cruz Roja y de la Media Luna Roja y abierta para que todos participen.**
 
 Al reunir a personas de todo el mundo, creamos una plataforma verdaderamente global para debatir e inspirar la acción climática.
 
