--- a/src/content/atrium/ar.mdx
+++ b/src/content/atrium/ar.mdx
@@ -1,8 +1,8 @@
 import AtriumVideo from '@/components/AtriumVideo.vue'
 
-**يؤثر تغير المناخ على الجميع في كل مكان. ولذا، لن يُستبعد أي بلد أو أي شخص أو أي منطقة زمنية من مؤتمر القمة الذي ستعقده شبكة الاتحاد الدولي للصليب الأحمر والهلال الأحمر. سترحب القمة بانضمام الجميع**
+**يؤثر تغير المناخ على الجميع في كل مكان. ولذا، لن يُستبعد أي بلد أو أي شخص أو أي منطقة زمنية من مؤتمر القمة الذي ستعقده شبكة الاتحاد الدولي للصليب الأحمر والهلال الأحمر. سترحب القمة بانضمام الجميع!**
 
- يجمع مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ الناس من جميع أنحاء العالم، مما يخلق منصة عالمية حقيقية  للمناقشة والعمل بما يخص تغير المناخ.
+من خلال التقاء أشخاص من جميع أنحاء العالم، سنقوم بإنشاء منصة عالمية حقيقية للمناقشة والعمل بما يخص تغير المناخ.
 
 
 تضم القمة أكثر من 200 جلسة مشوقة لتختار من بينها. وقبل أسبوع واحد من القمة، يمكنك البدء في تصفح البرنامج وإنشاء جدول زمني خاص بك ليومي ٩-١٠سبتمبر
@@ -42,9 +42,11 @@ import AtriumVideo from '@/components/AtriumVideo.vue'
 
 
 يمكنك الاختيار من بين أنواع الجلسات المختلفة: جلسة لطرح الأفكار، ألعاب للتعلم والحوار، أفرقة خبراء ونقاشات، جلسة حية للأسئلة والأجوبة مع الخبراء، الاشتراك في حل المشاكل
-عيادات الأطباء-المرضى، جولات افتراضية. في خيمة “عرض الابتكارات” ستتمكن من الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ والتصويت على الأفكار المفضلة لديك للفوز . قم بزيارة هذا الرابط لمزيد من المعلومات حول أنواع الجلسات
+عيادات الأطباء-المرضى، جولات افتراضية. في خيمة “عرض الابتكارات” ستتمكن من الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ والتصويت على الأفكار المفضلة لديك للفوز . قم بزيارة [هذا الرابط](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/) لمزيد من المعلومات حول أنواع الجلسات
 
-ستغطي الجلسات مواضيع مختلفة: الحد من مخاطر الكوارث، التمويل القائم على التوقعات والإنذار المبكر والعمل المبكر، الصحة، سبل المعيشة والخدمات الصامدة للمناخ وإدارة الموارد المائية بطريقة مستدامة، النزاعات، النزوح بسبب المناخ، الوسط الحضري، الشباب والمتطوعون، النوع الاجتماعي، وما إلى ذلك. جميع المواضيع متوفرة على  هذا الرابط
+ستغطي الجلسات مواضيع مختلفة: الحد من مخاطر الكوارث، التمويل القائم على التوقعات والإنذار المبكر والعمل المبكر، الصحة، سبل المعيشة والخدمات الصامدة للمناخ وإدارة الموارد المائية بطريقة مستدامة، النزاعات، النزوح بسبب المناخ، الوسط الحضري، الشباب والمتطوعون، النوع الاجتماعي، وما إلى ذلك. جميع المواضيع متوفرة على
+[هذا الرابط](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/)
+
  
 خلال القمة، بالإضافة إلى حلقات النقاش وجلسات العمل وورش العمل المشوقة، يمكنك التواصل مع أشخاص من جميع أنحاء العالم في محادثات حول فنجان القهوة   
 
