add partner heading to atrium

--- a/src/i18n/es.yml
+++ b/src/i18n/es.yml
@@ -19,6 +19,7 @@ atrium:
   # heroTitle: Virtual Climate Summit 2020
   # heroSubtitle: Sept 9, 12:00PM – Sept 10 19:00PM CEST
   heading: ¡Bienvenido a nuestra cumbre mundial digital sobre cambio climático!
+  sponsorHeading: Asociados
 
 login:
   title: Ingreso
