--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -19,6 +19,7 @@ atrium:
   # heroTitle: Virtual Climate Summit 2020
   # heroSubtitle: Sept 9, 12:00PM – Sept 10 19:00PM CEST
   heading: مرحبًا بك في القمة العالمية الرقمية لتغير المناخ!
+  sponsorHeading: شركاء
 
 login:
   title: تسجيل الدخول
