--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -19,6 +19,7 @@ atrium:
   heroTitle: Virtual Climate Summit 2020
   heroSubtitle: Sept 9, 12:00PM – Sept 10 19:00PM CEST
   heading: Welcome to our global, digital climate change summit!
+  sponsorHeading: Partners
 
 login:
   title: Login
