--- a/src/i18n/fr.yml
+++ b/src/i18n/fr.yml
@@ -19,6 +19,7 @@ atrium:
   # heroTitle: Virtual Climate Summit 2020
   # heroSubtitle: Sept 9, 12:00PM – Sept 10 19:00PM CEST
   heading: Bienvenue à notre sommet mondial numérique sur le changement climatique!
+  sponsorHeading: Partenaires
 
 login:
   title: Connexion
