--- a/src/content/atrium/en.mdx
+++ b/src/content/atrium/en.mdx
@@ -18,35 +18,14 @@ A summit is about connecting, inspiring each other, learning together and buildi
 
 ---
 
+After registering and logging in, check out our What’s on section for interesting sessions and inspiring speakers. One week before the summit you can start browsing the programme and build your own schedule for 9 – 10 September. 
 
-The sessions are arranged around four tracks:
+A summit is about connecting, inspiring each other, learning together and building new ideas and initiatives. In Climate:Red you will be able to do just that. 
 
-**ACT**
-
-What is the RCRC doing on climate? And what more do we need to do? These problem- and solution-oriented sessions will be based on experiences and lessons learned, and seek to accelerate action across the Red Cross Red Crescent network.
-
-**EMPOWER**
-
-What can we share and give to others? How can we support volunteers and communities we work with to address climate risks? These sessions will focus on capacity building, awareness-raising, community engagement and local leadership.
-
-**INFLUENCE**
-
-How can we leverage our auxiliary role and partnerships to influence change and raise ambition globally? Focus of these sessions will be on policy engagements and humanitarian diplomacy from local to global level.
-
-**TRANSFORM**
-
-What changes are needed in the ways we work? How can we be fit for the future in a changing climate? In these sessions we will look at innovations, greening and organisational changes.
+We can’t wait to meet you here!
 
 
 ---
-
-
-
-You can choose from various session types: panels and discussions, workshops, live Q&A with experts, Ignite Talks, games for learning and dialogue, fishbowls, doctor-patient clinics and virtual tours. In our innovation pitch tent you will hear innovative ideas and climate projects and vote on your favourites to win. [Visit here](https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#themes) for more info about session types.
-
-Sessions will cover various themes: climate-smart disaster risk reduction, health, early warning early action, livelihoods, food and water security, conflict, climate displacement, youth and volunteers, private sector, investments, laws and policies, sustainability and greening, gender and so on. All themes are listed [here.](https://future-rcrc.com/2020/06/09/register-for-climatered-virtual-summit/#themes)
-
-During the summit, in addition to our engaging panels, sessions and workshops, you can connect with people from around the globe in coffee chats.
 
 <AtriumVideo />
 
