--- a/src/content/atrium/ar.mdx
+++ b/src/content/atrium/ar.mdx
@@ -13,42 +13,18 @@ import AtriumVideo from '@/components/AtriumVideo.vue'
 - ستتمكن من مقابلة أشخاص من جميع أنحاء العالم في محادثات افتراضية في دردشة حول فنجان قهوة
 - ستقوم بجولات افتراضية على مشاريع حول تغير المناخ، والاستمتاع بألعاب رقمية حول تغير المناخ ... وغيرها المزيد من النشاطات
 
-القمة معنية بالتواصل بين المشاركين وإلهام بعضهم البعض والتعلم سوياً في سبيل بناء أفكار ومبادرات جديدة. في مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ ستتمكن من القيام بذلك.
-
 
 ---
 
+عند تسجيل الدخول، يمكنك الاطلاع على قسم ماذا يحدث لمتابعة  جلسات شيقة من قبل متحدثين ملهمين. وقبل أسبوع واحد من القمة، يمكنك البدء في تصفح البرنامج وإنشاء جدول زمني خاص بك ليومي ٩-١٠سبتمبر
 
-يتم تنظيم الجلسات حول أربعة مسارات
 
-**العمل**
+. القمة غير مخصصة للاستماع فقط، بل معنية بالتواصل بين المشاركين وإلهام بعضهم البعض والتعلم سوياً في سبيل بناء أفكار ومبادرات جديدة. في مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ ستتمكن من القيام بذلك
 
-ما الذي تفعله الحركة بشأن المناخ؟ وما هي الإجراءات الإضافية التي يجب أن تتخذها؟ ستستند هذه الجلسات الموجهة نحو حل المشاكل، إلى الخبرات والدروس المستخلصة، وستسعى إلى تسريع العمل عبر شبكة الصليب الأحمر والهلال الأحمر
-
-**التمكين**
-
-ما الذي يمكن أن نشاطره مع الآخرين ونقدمه لهم؟ كيف يمكن لنا دعم المتطوعين والمجتمعات المحلية التي نعمل معهم لمساعدتهم على التصدي لمخاطر المناخ؟ ستركز هذه الجلسات على تعزيز القدرات والتوعية والمشاركة المجتمعية والقيادة المحلية
-
-**التأثير**
-
-كيف يمكن لنا الاستفادة من دورنا المساعد وشراكاتنا للتأثير في التغيير وزيادة طموحنا على الصعيد العالمي؟
-ستركز هذه الجلسات على تعهدات السياسات والدبلوماسية الإنسانية انطلاقا من المستوى المحلي وانتهاء بالمستوى
-
-**التحويل**
-
-ما هي التغييرات اللازمة في طرق عملنا؟وكيف يمكن لنا التأهب للمستقبل في ظل تغيّر المناخ؟ سننظر في تلك الجلسات في الابتكارات والتخضير والتغييرات التنظيمية
-
+.لا يمكننا الانتظار لمقابلتك هنا
 
 ---
 
-
-يمكنك الاختيار من بين أنواع الجلسات المختلفة: جلسة لطرح الأفكار، ألعاب للتعلم والحوار، أفرقة خبراء ونقاشات، جلسة حية للأسئلة والأجوبة مع الخبراء، الاشتراك في حل المشاكل
-عيادات الأطباء-المرضى، جولات افتراضية. في خيمة “عرض الابتكارات” ستتمكن من الاطلاع على أفكار مبتكرة ومشاريع حول تغير المناخ والتصويت على الأفكار المفضلة لديك للفوز . قم بزيارة [هذا الرابط](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/) لمزيد من المعلومات حول أنواع الجلسات
-
-ستغطي الجلسات مواضيع مختلفة: الحد من مخاطر الكوارث، التمويل القائم على التوقعات والإنذار المبكر والعمل المبكر، الصحة، سبل المعيشة والخدمات الصامدة للمناخ وإدارة الموارد المائية بطريقة مستدامة، النزاعات، النزوح بسبب المناخ، الوسط الحضري، الشباب والمتطوعون، النوع الاجتماعي، وما إلى ذلك. جميع المواضيع متوفرة على
-[هذا الرابط](https://future-rcrc.com/fr/2020/06/22/virtual-climate-summit-climatered/)
-
-خلال القمة، بالإضافة إلى حلقات النقاش وجلسات العمل وورش العمل المشوقة، يمكنك التواصل مع أشخاص من جميع أنحاء العالم في محادثات حول فنجان القهوة
 
 <AtriumVideo />
 
