show more data on /me

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -65,12 +65,14 @@ profile:
   emailText: بريدك الالكتروني
   localeText: اللغة المختارة
   whenText: تسجيل الدخول
+  # registeredText: Registered
   nameText: الإسم
   countryText: البلد
   affiliationText: جهة الانتساب
   logoutButton: تسجيل الخروج
   deleteButton: حذف الحساب
   deleteText: هذا دائم، هل أنت متأكد؟
+  # loadingText: Fetching profile
 
 sessions:
   title: ماذا يحدث
