Added language selected, added theme selector, added internationalized strings, added basic coffeechat layout

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -84,6 +84,12 @@ schedule:
 
 coffeechat:
   title: دردشة حول فنجان قهوة
+  filters:
+    languages:
+      EN: English
+      FR: Française
+      ES: Español
+      AR: العربية
 
 help:
   title: المساعدة
