--- a/src/i18n/fr.yml
+++ b/src/i18n/fr.yml
@@ -84,6 +84,12 @@ schedule:
 
 coffeechat:
   title: Causerie Café
+  filters:
+    languages:
+      EN: English
+      FR: Française
+      ES: Español
+      AR: العربية
 
 help:
   title: Aide
