Coffee chat gui initial commit

--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -104,6 +104,9 @@ coffeechat:
       urban: Urban
       climateSmartDdr: Climate Smart DDR
 
+coffeechatroom:
+  title: Coffee chat
+
 help:
   title: Help
 
